--- a/src/_templates/index/i-2.pug
+++ b/src/_templates/index/i-2.pug
@@ -6,20 +6,20 @@ section.index-2(data-scroll-id="1" full-screen)
 					.section(data-bg="./assets/images/background/index-2.1.jpg")
 						.block-content.mx-at(max-width='845px')
 							.img-bg.ov-h
-								img.lazyload.ofcv(data-src="./assets/images/background/item_index-2__1.png", alt="")
+								img.ofcv(src="./assets/images/background/item_index-2__1.png", alt="")
 							.content.ta-c
 								.block-title.mx-at
-									h2.wow.fadeInLeft(font-size="40px" data-wow-delay=".2s") GIÁ TRỊ DỰ ÁN
-								.sub-title.wow.fadeInLeft(data-wow-delay=".3s")
+									h2(font-size="40px") GIÁ TRỊ DỰ ÁN
+								.sub-title
 									p West Lakes Golf & Villass
 									p Quần thể biệt thự nghỉ dưỡng ven đô, ôm trọn sân Golf đầu tiên ở phía Tây Thành phố Hồ Chí Minh
-								.desc.wow.fadeInLeft(data-wow-delay=".4s")
+								.desc
 									p Phát triển dựa trên những quy chuẩn kiến trúc khắt khe của sân Golf West Lakes - một ssản phẩm của đơn vị thiết kế Thomson Perrett hàng đầu thế giới, chỉ cách trung tâm Tp.HCM chỉ hơn 30km nhưng quy tụ các tiện ích nội khu 5 sao đáp ứng nhu cầu nghỉ dưỡng xanh cao cấp của gia đình hiện đại.
 				.swiper-slide
 					.section(data-bg="./assets/images/background/index-2.2.jpg")
 						.block-content.ml-at(max-width='50%' border-right)
 							.img-bg.ov-h
-								img.lazyload.ofcv(data-src="./assets/images/background/item_index-2__2.png", alt="")
+								img.ofcv(src="./assets/images/background/item_index-2__2.png", alt="")
 							.content.ta-c
 								.block-title.mx-at
 									h2(font-size="40px" no-after) Cộng đồng tinh hoa 
@@ -31,7 +31,7 @@ section.index-2(data-scroll-id="1" full-screen)
 					.section(data-bg="./assets/images/background/index-2.3.jpg")
 						.block-content.ml-at(max-width='50%' border-right)
 							.img-bg.ov-h
-								img.lazyload.ofcv(data-src="./assets/images/background/item_index-2__3.png", alt="")
+								img.ofcv(src="./assets/images/background/item_index-2__3.png", alt="")
 							.content.ta-c
 								.block-title.mx-at
 									h2(font-size="40px" no-after) Kiến trúc độc bản
@@ -43,7 +43,7 @@ section.index-2(data-scroll-id="1" full-screen)
 					.section(data-bg="./assets/images/background/index-2.4.jpg")
 						.block-content(max-width='50%' border-left)
 							.img-bg.ov-h
-								img.lazyload.ofcv(data-src="./assets/images/background/item_index-2__4.png", alt="")
+								img.ofcv(src="./assets/images/background/item_index-2__4.png", alt="")
 							.content.ta-c
 								.block-title.mx-at
 									h2(font-size="40px" no-after) Tiềm năng đầu tư
