--- a/src/index.pug
+++ b/src/index.pug
@@ -9,7 +9,7 @@ block loading
 block banner,breadcrumb
 block main
 	include _templates/index/i-1
-	include _templates/index/i-2
+	include _templates/index/i-2--slick
 	include _templates/index/i-3
 	include _templates/index/i-4
 	include _templates/index/i-5
