update ver slick

--- a/src/_templates/index/i-2--slick.pug
+++ b/src/_templates/index/i-2--slick.pug
@@ -1,8 +1,7 @@
 section.index-2(data-scroll-id="1" full-screen)
 	.slider-main-index__2.w-100.h-100
-		.swiper-container.w-100.h-100
-			.swiper-wrapper.w-100.h-100
-				.swiper-slide
+		.slick-wrapper.w-100.h-100
+				.slick-item
 					.section(data-bg="./assets/images/background/index-2.1.jpg")
 						.block-content.mx-at(max-width='845px')
 							.img-bg.ov-h
@@ -15,7 +14,7 @@ section.index-2(data-scroll-id="1" full-screen)
 									p Quần thể biệt thự nghỉ dưỡng ven đô, ôm trọn sân Golf đầu tiên ở phía Tây Thành phố Hồ Chí Minh
 								.desc
 									p Phát triển dựa trên những quy chuẩn kiến trúc khắt khe của sân Golf West Lakes - một ssản phẩm của đơn vị thiết kế Thomson Perrett hàng đầu thế giới, chỉ cách trung tâm Tp.HCM chỉ hơn 30km nhưng quy tụ các tiện ích nội khu 5 sao đáp ứng nhu cầu nghỉ dưỡng xanh cao cấp của gia đình hiện đại.
-				.swiper-slide
+				.slick-item
 					.section(data-bg="./assets/images/background/index-2.2.jpg")
 						.block-content.ml-at(max-width='50%' border-right)
 							.img-bg.ov-h
@@ -27,7 +26,7 @@ section.index-2(data-scroll-id="1" full-screen)
 										| xứng tầm vị thế
 								.desc.mx-at(max-width='80%')
 									p Không nằm giữa trung tâm đô thị phồn hoa dự án được quy hoạch và thiết kế dành riêng cho cộng đồng dân cư thông thái yêu thích nơi sống cách biệt chốn thị thành náo nhiệt và những tiêu chuẩn sống giành riêng cho giới trí thức West Lakes Gofl & Villas được kiến tạo để đáp ứng mọi nhu cầu khắt khe của một nơi an cư xứng đáng với vị thế vượt tầm của chủ nhân thành đạt. Mỗi biệt thự thiết kế tinh tế đến từng chi tiết chính là tuyên ngôn mạnh về phong cách sống ở tầm cao khác biệt tương ứng, xứng đáng với giá trị đầu tư.
-				.swiper-slide
+				.slick-item
 					.section(data-bg="./assets/images/background/index-2.3.jpg")
 						.block-content.ml-at(max-width='50%' border-right)
 							.img-bg.ov-h
@@ -39,7 +38,7 @@ section.index-2(data-scroll-id="1" full-screen)
 										| cảnh quan hoàn mỹ
 								.desc.mx-at(max-width='80%')
 									p Kiến trúc độc bản - cảnh quan hoàn mỹ: Phía sau vẻ hào nhoáng của dãy biệt thự đẳng cấp là hàng trăm hecta thảm cỏ sân Golf xanh mướt chiếm trọn mọi tầm nhìn. Sự kế hợp hoàn hảo giữa vẻ đẹp kiến trúc và cảnh quan hoàn mỹ của West Lakes Golf & Villas sẽ là tuyệt phẩm dành riêng cho những chủ sở hữu xứng tầm.
-				.swiper-slide
+				.slick-item
 					.section(data-bg="./assets/images/background/index-2.4.jpg")
 						.block-content(max-width='50%' border-left)
 							.img-bg.ov-h
