--- a/src/_templates/index/i-4--slick.pug
+++ b/src/_templates/index/i-4--slick.pug
@@ -6,17 +6,17 @@ section.index-4
 					.number 01
 					.title Sân golf chuẩn quốc tế 27 lỗ
 					//- .text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
-				.swiper-container
-					.swiper-wrapper
-						.swiper-slide
+				.slick-container
+					.slick-wrapper
+						.slick-item
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
 					.map-index-4-slider-prev-mobile
 						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
@@ -27,17 +27,17 @@ section.index-4
 					.number 02
 					.title  Nhà câu lạc bộ hiện đại
 					//- .text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
-				.swiper-container
-					.swiper-wrapper
-						.swiper-slide
+				.slick-container
+					.slick-wrapper
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
 					.map-index-4-slider-prev-mobile
 						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
@@ -48,17 +48,17 @@ section.index-4
 					.number 03
 					.title  Tổ Hợp Giải Trí & Công Viên Nước
 					//- .text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
-				.swiper-container
-					.swiper-wrapper
-						.swiper-slide
+				.slick-container
+					.slick-wrapper
+						.slick-item
 							img(src="./assets/images/index-4/2.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/2.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/2.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/2.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/2.jpg", alt="")
 					.map-index-4-slider-prev-mobile
 						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
@@ -69,17 +69,17 @@ section.index-4
 					.number 04
 					.title Công viên chủ đề
 					//- .text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
-				.swiper-container
-					.swiper-wrapper
-						.swiper-slide
+				.slick-container
+					.slick-wrapper
+						.slick-item
 							img(src="./assets/images/index-4/3.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/3.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/3.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/3.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/3.jpg", alt="")
 					.map-index-4-slider-prev-mobile
 						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
@@ -90,17 +90,17 @@ section.index-4
 					.number 05
 					.title Trường Tiểu Học
 					//- .text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
-				.swiper-container
-					.swiper-wrapper
-						.swiper-slide
+				.slick-container
+					.slick-wrapper
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
 					.map-index-4-slider-prev-mobile
 						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
@@ -111,17 +111,17 @@ section.index-4
 					.number 06
 					.title Trường trung học
 					//- .text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
-				.swiper-container
-					.swiper-wrapper
-						.swiper-slide
+				.slick-container
+					.slick-wrapper
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/1.jpg", alt="")
 					.map-index-4-slider-prev-mobile
 						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
@@ -132,17 +132,17 @@ section.index-4
 					.number 07
 					.title Bệnh viện quốc tế
 					//- .text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
-				.swiper-container
-					.swiper-wrapper
-						.swiper-slide
+				.slick-container
+					.slick-wrapper
+						.slick-item
 							img(src="./assets/images/index-4/4.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/4.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/4.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/4.jpg", alt="")
-						.swiper-slide
+						.slick-item
 							img(src="./assets/images/index-4/4.jpg", alt="")
 					.map-index-4-slider-prev-mobile
 						<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
