--- a/src/index.pug
+++ b/src/index.pug
@@ -11,7 +11,7 @@ block main
 	include _templates/index/i-1
 	include _templates/index/i-2--slick
 	include _templates/index/i-3
-	include _templates/index/i-4
+	include _templates/index/i-4--slick
 	include _templates/index/i-5
 	include _templates/index/i-6
 	include _templates/index/i-7
