--- a/src/scss/pages/index/i-4--slick.scss
+++ b/src/scss/pages/index/i-4--slick.scss
@@ -598,6 +598,10 @@
 	border-radius: 6px;
 	max-height: 100%;
 
+	.slick-container {
+		position: relative;
+	}
+
 	.content {
 		display: flex;
 		flex-wrap: wrap;
