--- a/src/index.pug
+++ b/src/index.pug
@@ -9,9 +9,9 @@ block loading
 block banner,breadcrumb
 block main
 	include _templates/index/i-1
-	include _templates/index/i-2
+	include _templates/index/i-2--slick
 	include _templates/index/i-3
-	include _templates/index/i-4
+	include _templates/index/i-4--slick
 	include _templates/index/i-5
 	include _templates/index/i-6
 	include _templates/index/i-7
