--- a/Views/Home/_Footer.cshtml
+++ b/Views/Home/_Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MainProject.Bussiness.Models.FooterViewModel
 
 <footer>
-    <p>Copyright © 2020. All rights reserved. Designed by WEB4G Solutions</p>
+    <p>Copyright © 2020. Designed by WEB4G Solutions</p>
 </footer>
