--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -62,112 +62,112 @@
     <section class="last-index" data-bg="/Content/resources/assets/images/background/last-index.jpg">
         <section class="index-9" data-scroll-id="6">
             <div class="container">
-                <div class="block-content mx-at" max-width="50%">
-                    <div class="content ta-c">
-                        <div class="block-title mx-at" max-width="600px">
-                            <h2 class="wow fadeInLeft" data-wow-delay=".3s">@Html.GetResource(ResourceKeyCollection.Progress)</h2>
-                        </div>
-                        <div class="sub-title">
-                            <p class="ta-c">@Html.GetResource(ResourceKeyCollection.Progress_Description)</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="list-item mx-at" max-width="1360px">
-                    <div class="slider-item__index-9">
-                        <div class="swiper-container">
-                            <div class="swiper-wrapper">
-                                @foreach (var item in Model.News)
-                                {
-                                    <div class="swiper-slide">
-                                        <a class="item" href="@item.GetUrl()">
-                                            <div class="img ov-h">
-                                                <img class="ofcv" src="@item.ImageDefault" alt="@item.SeName">
-                                                <div class="date" data-bg="/Content/resources/assets/images/background/item-date-index-9.png">
-                                                    @item.Order.ToString("dd/MM/yy")
-                                                </div>
-                                            </div>
-                                            <div class="text" data-bg="/Content/resources/assets/images/background/item_index-9.png">
-                                                <h3 class="lcl lcl-1">@item.Title</h3>
-                                                <p class="lcl lcl-2">@item.Description</p>
-                                            </div>
-                                        </a>
-                                    </div>
-                                }
+                    <div class="block-content mx-at" max-width="50%">
+                        <div class="content ta-c">
+                            <div class="block-title mx-at" max-width="600px">
+                                <h2>@Html.GetResource(ResourceKeyCollection.Progress)</h2>
+                            </div>
+                            <div class="sub-title">
+                                <p class="ta-c">@Html.GetResource(ResourceKeyCollection.Progress_Description)</p>
                             </div>
                         </div>
-                        <div class="list-btn-slider">
-                            <div class="item swiper-button-prev"></div>
-                            <div class="item swiper-button-next"></div>
+                    </div>
+                    <div class="list-item mx-at" max-width="1360px">
+                        <div class="slider-item__index-9">
+                            <div class="swiper-container">
+                                <div class="swiper-wrapper">
+                                    @foreach (var item in Model.News)
+                                    {
+                                        <div class="swiper-slide">
+                                            <a class="item" href="@item.GetUrl()">
+                                                <div class="img ov-h">
+                                                    <img class="ofcv" src="@item.ImageDefault" alt="@item.SeName">
+                                                    <div class="date" data-bg="/Content/resources/assets/images/background/item-date-index-9.png">
+                                                        @item.Order.ToString("dd/MM/yy")
+                                                    </div>
+                                                </div>
+                                                <div class="text" data-bg="/Content/resources/assets/images/background/item_index-9.png">
+                                                    <h3 class="lcl lcl-1">@item.Title</h3>
+                                                    <p class="lcl lcl-2">@item.Description</p>
+                                                </div>
+                                            </a>
+                                        </div>
+                                    }
+                                </div>
+                            </div>
+                            <div class="list-btn-slider">
+                                <div class="item swiper-button-prev"></div>
+                                <div class="item swiper-button-next"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
-        <section class="index-10" data-scroll-id="7">
+        <section class="index-10" data-scroll-id="7" id="target">
             <div class="container" max-width="1360px">
-                <div class="block-1 mx-at">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="block-content mx-at">
-                                <div class="content ta-c">
-                                    <div class="block-title mx-at wow fadeInLeft" data-wow-delay=".2s">
-                                        <h2 style="text-transform:uppercase">@Model.Section8.Title</h2>
-                                    </div>
-                                    <div class="desc">
-                                        @Html.Raw(Model.Section8.Content)
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            @{
-                                var videos = JsonHelper.Deserialize<List<MainProject.Core.Image>>(Model.Section8.Image)
-                                                            .OrderByDescending(x => x.Order).ToList();
-                            }
-                            @if (videos.Count > 0)
-                            {
-                                <div class="review-video">
-                                    <div class="block-video">
-                                        <div class="youtube-api" data-thumbnail="/Content/resources/assets/images/items/index-9__1.png" data-url="@videos[0].Path"></div>
-                                    </div>
-                                    <div class="content" data-bg="/Content/resources/assets/images/background/text-review-video.png">
-                                        <div class="date" data-bg="/Content/resources/assets/images/background/item-date-index-9.png">
-                                            @videos[0].Order.ToString("dd/MM/yy")
+                    <div class="block-1 mx-at">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="block-content mx-at">
+                                    <div class="content ta-c">
+                                        <div class="block-title mx-at">
+                                            <h2 style="text-transform:uppercase">@Model.Section8.Title</h2>
+                                        </div>
+                                        <div class="desc">
+                                            @Html.Raw(Model.Section8.Content)
                                         </div>
                                     </div>
                                 </div>
-                            }
-                        </div>
-                    </div>
-                </div>
-                <div class="block-2">
-                    <div class="slider-thumnail-video">
-                        <div class="swiper-container">
-                            <div class="swiper-wrapper">
-                                @foreach (var item in videos)
+                            </div>
+                            <div class="col-lg-6">
+                                @{
+                                    var videos = JsonHelper.Deserialize<List<MainProject.Core.Image>>(Model.Section8.Image)
+                                                                .OrderByDescending(x => x.Order).ToList();
+                                }
+                                @if (videos.Count > 0)
                                 {
-                                    <div class="swiper-slide">
-                                        <div class="item" data-url="@item.Path">
-                                            <div class="img ov-h"><img class="ofcv" src="@item.ImageDefault" alt=""></div>
-                                            <div class="text" data-bg="/Content/resources/assets/images/background/item_index-9.png">
-                                                <h3 class="lcl lcl-3">@item.Name</h3>
-                                                <p class="d-n">@item.Description</p>
-                                                <div class="date" data-bg="/Content/resources/assets/images/background/item-date-index-9.png">
-                                                    @item.Order.ToString("dd/MM/yy")
-                                                </div>
+                                    <div class="review-video">
+                                        <div class="block-video">
+                                            <div class="youtube-api" data-thumbnail="/Content/resources/assets/images/items/index-9__1.png" data-url="@videos[0].Path"></div>
+                                        </div>
+                                        <div class="content" data-bg="/Content/resources/assets/images/background/text-review-video.png">
+                                            <div class="date" data-bg="/Content/resources/assets/images/background/item-date-index-9.png">
+                                                @videos[0].Order.ToString("dd/MM/yy")
                                             </div>
                                         </div>
                                     </div>
                                 }
                             </div>
                         </div>
-                        <div class="list-btn-slider">
-                            <div class="item swiper-button-prev"></div>
-                            <div class="item swiper-button-next"></div>
+                    </div>
+                    <div class="block-2">
+                        <div class="slider-thumnail-video">
+                            <div class="swiper-container">
+                                <div class="swiper-wrapper">
+                                    @foreach (var item in videos)
+                                    {
+                                        <div class="swiper-slide">
+                                            <div class="item" data-url="@item.Path">
+                                                <div class="img ov-h"><img class="ofcv" src="@item.ImageDefault" alt=""></div>
+                                                <div class="text" data-bg="/Content/resources/assets/images/background/item_index-9.png">
+                                                    <h3 class="lcl lcl-3">@item.Name</h3>
+                                                    <p class="d-n">@item.Description</p>
+                                                    <div class="date" data-bg="/Content/resources/assets/images/background/item-date-index-9.png">
+                                                        @item.Order.ToString("dd/MM/yy")
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    }
+                                </div>
+                            </div>
+                            <div class="list-btn-slider">
+                                <div class="item swiper-button-prev"></div>
+                                <div class="item swiper-button-next"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
         <section class="index-11">
             @Html.Action("Index", "Contact")
@@ -176,41 +176,40 @@
     <div class="index-page" id="js-page-verify" hidden></div>
 </main>
 <div class="fixed-menu">
-    <div class="block-item">
+    <div class="block-item" onclick="gtag('event', <click>, { 'event_category': <view360>,'event_label': <01>,'value': <0>});">
         <div class="item css-selector">
-		<a href="https://demo.egal.vn/demo/westlakes/" target="_blank">
-            <div class="icon"><img class="blur-up lazyload" src="/Content/resources/assets/icons/view-360.svg" alt="VIEW-360"></div>
-            <div class="text-hover">
-                <h5>VIEW 360<sup>o</sup></h5>
-				</a>
-            </div>
+            <a href="https://demo.egal.vn/demo/westlakes/" target="_blank">
+                <div class="icon"><img class="blur-up lazyload" src="/Content/resources/assets/icons/view-360.svg" alt="VIEW-360"></div>
+                <div class="text-hover">
+                    <h5>VIEW 360<sup>o</sup></h5>
+                </div>
+            </a>
         </div>
     </div>
-    <div class="block-item" type="text" data-scroll-to="8">
+    <div class="block-item" type="text" data-scroll-to="8" onclick="gtag('event', <click>, {'event_category': <nhan-bao-gia>,'event_label': <nhanbaogia>,'value': <0>});">
         <div class="item">
             <div class="text">@Html.GetResource(ResourceKeyCollection.Menu_Contact)</div>
             <div class="icon"><img class="blur-up lazyload" src="/Content/resources/assets/icons/quotation.svg" alt="PHONE"></div>
         </div>
     </div>
-    <div class="block-item">
+    <div class="block-item" onclick="gtag('event', <click>, {'event_category': <hotline>,'event_label': <goihotline>,'value': <0>});">
         <div class="item css-selector">
-			<a href="tel:@Html.GetResource(ResourceKeyCollection.Hotline)">
-            <div class="icon"><img class="blur-up lazyload" src="/Content/resources/assets/icons/phone.svg" alt="PHONE"></div>
-            <div class="text-hover">
-                <h5>@Html.GetResource(ResourceKeyCollection.Hotline)</h5>
-            </div>
-			</a>
+            <a href="tel:@Html.GetResource(ResourceKeyCollection.Hotline)">
+                <div class="icon"><img class="blur-up lazyload" src="/Content/resources/assets/icons/phone.svg" alt="PHONE"></div>
+                <div class="text-hover">
+                    <h5>@Html.GetResource(ResourceKeyCollection.Hotline)</h5>
+                </div>
+            </a>
         </div>
     </div>
     <div class="block-item">
-	
         <div class="item css-selector">
-			<a href="/Content/resources/assets/download/chinh-sach-thanh-toan.pdf" download>
-				<div class="icon"><img class="blur-up lazyload" src="/Content/resources/assets/icons/download.svg" alt="DOWNLOAD"></div>
-				<div class="text-hover">
-					<h5>@Html.GetResource(ResourceKeyCollection.Download_Policy)</h5>
-				</div>
-			</a>
+            <a href="/Content/resources/assets/download/chinh-sach-thanh-toan.pdf" download>
+                <div class="icon"><img class="blur-up lazyload" src="/Content/resources/assets/icons/download.svg" alt="DOWNLOAD"></div>
+                <div class="text-hover">
+                    <h5>@Html.GetResource(ResourceKeyCollection.Download_Policy)</h5>
+                </div>
+            </a>
         </div>
     </div>
 </div>
