--- a/Views/Home/_Header.cshtml
+++ b/Views/Home/_Header.cshtml
@@ -1,7 +1,12 @@
 ﻿@model MainProject.Bussiness.Models.HeaderViewModel
-
 <div id="loading-container">
-    <div class="loading-wrapper"></div>
+	<div class="loading-wrapper">
+		<div id="loading-logo"><img src="/Content/resources/assets/logo.png"></div>
+		<div class="progress">
+			<div id="progress-bar"></div>
+		</div>
+		<div class="progress-status">Loading: <span id="progress-percentage">0</span>%</div>
+	</div>
 </div>
 <header>
     <div class="container h-100">
