--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,8 +25,29 @@
     <link rel="stylesheet" href="/Content/resources/css/core.min.css">
     <link rel="stylesheet" href="/Content/resources/css/main.min.css">
     @RenderSection("styles", required: false)
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170069058-1"></script>
+	<!-- <script> -->
+	  <!-- window.dataLayer = window.dataLayer || []; -->
+	  <!-- function gtag(){dataLayer.push(arguments);} -->
+	  <!-- gtag('js', new Date()); -->
+
+	  <!-- gtag('config', 'UA-170069058-1'); -->
+	<!-- </script> -->
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TR6C85F');</script>
+    <!-- End Google Tag Manager -->
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR6C85F"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     @Html.Action("ShowHeader", "Home")
 
     @RenderBody()
