--- a/src/_templates/index/i-11.pug
+++ b/src/_templates/index/i-11.pug
@@ -31,4 +31,4 @@ section.index-11
 							input.form-control(type="text" placeholder="Phone" name="Phone")
 							span.field-validate-error Error
 						.submit
-							button(data-url="/test" onclick="gtag('event', <click>, {'event_category': <gui-bao-gia>,'event_label': <send>,'value': <0>});") gửi
+							button(data-url="/test" onclick="gtag('event', 'click', {'event_category': 'gui-bao-gia','event_label': 'send','value': '0'});") gửi
